# contracting-smtp-automation

./: .gitignore  Makefile  README.md  docker-compose.yml  env.template  pyproject.toml  requirements.txt
devops/: Dockerfile  cloudbuild.yaml
infra/: .gitignore  main.tf  variables.tf
infra/modules/pipeline/: alerts.tf  main.tf  variables.tf
src/: asset_helpers.py  color_logger.py  config_template.py  email_helpers.py  main.py  run_automation.py  utilities.py
src/assets/: base_attachment.html  style.css
